--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,7 @@
 ﻿body {
 	padding:0;
 	margin:0;
+	background-color:orange;
 }
 
 .border {
@@ -26,23 +27,4 @@
 .container-fluid {
 	width:100%;
 	padding: 0;
-}
-
-.langbar {
-	width:100%;
-	height:70px;
-	text-align:right;
-}
-
-.langitem {
-	width:40px;
-	height:40px;
-	float:left;
-	cursor:pointer;
-}
-
-.info {
-	position:fixed;
-	top:140px;
-	margin:30px;
 }
